# Ceres

./: .env  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  clippy.toml
.github/: labeler.yml
.github/workflows/: ci.yml  labeler.yml  pages.yml  release.yml
crates/ceres-cli/src/: main.rs
crates/ceres-client/src/: ckan.rs  gemini.rs  lib.rs
crates/ceres-core/: Cargo.toml
crates/ceres-core/src/: config.rs  error.rs  harvest.rs  lib.rs  models.rs  progress.rs  search.rs  sync.rs  traits.rs
crates/ceres-db/src/: repository.rs
docs/: index.html
examples/: portals.toml
migrations/: 202511290001_init.sql  202512210001_add_content_hash.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/clients/: ckan.rs
src/storage/: mod.rs  pg.rs
